--- a/share-post/main.css
+++ b/share-post/main.css
@@ -9,10 +9,18 @@
   box-sizing: border-box;
   -webkit-overflow-scrolling: touch;
   font-family: "Mulish", sans-serif;
-  /* 
-  &:focus {
-    outline: 0;
-  } */
+}
+:focus {
+  outline: 0;
+}
+html {
+  height: 100%;
+}
+
+body {
+  height: 100%;
+  padding: 30px;
+  background: linear-gradient(#f073c8, #ff6a95);
 }
 
 .popup {
@@ -22,6 +30,8 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  opacity: 0%;
+  visibility: hidden;
   z-index: 10;
   display: flex;
   align-items: center;
@@ -33,6 +43,7 @@
   padding: 55px 78px;
   background-color: #ffffff;
   border-radius: 15px;
+  position: relative;
 }
 .share-popup h4 {
   color: #242e4c;
@@ -59,8 +70,8 @@ li a {
   border: 1px solid #ebebf2;
   transition: 300ms ease-in-out;
 }
-li a:hover{
-  border: 1.34px solid #F775C1;
+li a:hover {
+  border: 1.34px solid #f775c1;
 }
 .share-popup h6 {
   color: #242e4c;
@@ -79,6 +90,12 @@ li a:hover{
   font-size: 16px;
   font-weight: 400;
 }
+.share-popup input {
+  width: 503px;
+  height: 20px;
+  appearance: none;
+  /* outline: none; */
+}
 .input button {
   position: absolute;
   top: 19px;
@@ -89,7 +106,52 @@ li a:hover{
   background-color: inherit;
   cursor: pointer;
 }
-.share-popup img{
+.share-popup img {
   width: 40px;
   height: 40px;
+}
+.popup-button {
+  display: none;
+}
+.popup-button:checked + .popup {
+  opacity: 1;
+  visibility: visible;
+}
+.share-popup .popup-close {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  /* background:#0404d3; */
+  width: 39px;
+  height: 39px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.popup-close path {
+  transition: 400ms fill;
+}
+.popup-close circle:hover + path {
+  fill: #7d7a9e;
+}
+
+[for="popup-1"] {
+  cursor: pointer;
+}
+.share-button {
+  display: inline-block;
+  display: inline-flex;
+  width: 94px;
+  height: 28px;
+  border-radius: 5px;
+  border: 1px solid #ebebf2;
+  font-size: 14px;
+  font-weight: 700;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: white;
+}
+::selection {
+  background-color: #f775c1;
 }
